--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,10 +16,20 @@ jobs:
         run: |
           set -e
           VERSION="${GITHUB_REF_NAME}"
-            mkdir -p temp/one-shot-migrate
-                        rsync -av --exclude='.git' --exclude='.github' --exclude='temp' --exclude='dist' . temp/one-shot-migrate/
-                                    cd temp && zip -r "../dist/${ZIP}" one-shot-migrate && cd ..mkdir -p dist
-          zip -r "dist/${ZIP}" one-shot-migrate
+          ZIP="one-shot-migrate-${VERSION}.zip"
+          
+          # Create dist directory first
+          mkdir -p dist
+          
+          # Create temp folder structure for proper zip naming
+          mkdir -p temp/one-shot-migrate
+          
+          # Copy files (excluding git/github/temp/dist)
+          rsync -av --exclude='.git' --exclude='.github' --exclude='temp' --exclude='dist' . temp/one-shot-migrate/
+          
+          # Create zip from temp directory
+          cd temp
+          zip -r "../dist/${ZIP}" one-shot-migrate
 
       - name: Create GitHub Release and upload asset
         env:
@@ -28,5 +38,5 @@ jobs:
           set -e
           VERSION="${GITHUB_REF_NAME}"
           ZIP="one-shot-migrate-${VERSION}.zip"
-          gh release create "${VERSION}" "dist/${ZIP}" --title "${VERSION}" --notes-file "one-shot-migrate/RELEASE_NOTES.md" || \
-          gh release upload "${VERSION}" "dist/${ZIP}" --clobber
+          gh release create "${VERSION}" "dist/${ZIP}" --title "${VERSION}" --notes-file "RELEASE_NOTES.md" || \
+            gh release upload "${VERSION}" "dist/${ZIP}" --clobber
